--- a/content/Task_1.ipynb
+++ b/content/Task_1.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "id": "b6b7dd72",
    "metadata": {
     "tags": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "id": "cce90732",
    "metadata": {
     "tags": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "id": "91fabac7",
    "metadata": {
     "tags": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "id": "2257d581",
    "metadata": {
     "tags": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "id": "09c9a3ba",
    "metadata": {
     "tags": [
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "f60d3e65",
    "metadata": {
     "tags": [
@@ -359,8 +359,7 @@
       "    accuracy                           0.72       360\n",
       "   macro avg       0.72      0.72      0.71       360\n",
       "weighted avg       0.72      0.72      0.71       360\n",
-      "\n",
-      "train features shape: (1440, 18432)\n"
+      "\n"
      ]
     }
    ],
@@ -397,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "id": "689f46d8",
    "metadata": {
     "tags": [
@@ -452,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "ed168f7b",
    "metadata": {
     "tags": [
@@ -499,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "e64cf2a0",
    "metadata": {
     "tags": [
@@ -512,7 +511,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "completed training set\n"
+      "all images processed, head of train df: \n",
+      "                                                filepath       type   id  \\\n",
+      "419   ../NEU-DET/train/images\\inclusion\\inclusion_44...  inclusion   44   \n",
+      "675      ../NEU-DET/train/images\\patches\\patches_59.jpg    patches   59   \n",
+      "748   ../NEU-DET/train/images\\pitted_surface\\pitted_...     pitted  124   \n",
+      "226      ../NEU-DET/train/images\\crazing\\crazing_87.jpg    crazing   87   \n",
+      "1163  ../NEU-DET/train/images\\rolled-in_scale\\rolled...  rolled-in   66   \n",
+      "\n",
+      "                                           hog_features  \\\n",
+      "419   [0.23692369683202827, 0.15415997280614854, 0.2...   \n",
+      "675   [0.2932409827161144, 0.03451907966977623, 0.13...   \n",
+      "748   [0.25374744478784045, 0.25374744478784045, 0.2...   \n",
+      "226   [0.22393231707764982, 0.08401035403228327, 0.2...   \n",
+      "1163  [0.19847725569063174, 0.07978102076128961, 0.1...   \n",
+      "\n",
+      "                                          glcm_features  \n",
+      "419   [12.780653266331631, 17.25441276735443, 8.2350...  \n",
+      "675   [307.57419597989616, 426.07954344588404, 277.4...  \n",
+      "748   [20.131432160803516, 28.99457084417118, 13.908...  \n",
+      "226   [207.34271356781545, 265.6987954849871, 170.63...  \n",
+      "1163  [68.04957286432042, 112.83295876367059, 105.30...  \n"
      ]
     }
    ],
@@ -540,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 38,
    "id": "fc5f150a",
    "metadata": {
     "tags": [
@@ -614,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 39,
    "id": "bca7d19f",
    "metadata": {
     "tags": [
@@ -646,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 40,
    "id": "80d77a2c",
    "metadata": {},
    "outputs": [
@@ -665,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 41,
    "id": "f0b1fe7b",
    "metadata": {},
    "outputs": [],
@@ -688,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 42,
    "id": "91fb7041",
    "metadata": {
     "tags": [
@@ -718,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 43,
    "id": "4640aca8",
    "metadata": {
     "tags": [
@@ -730,7 +749,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2432d976f87549049cf41c79507f1ac6",
+       "model_id": "9ac67e18f607414e8aa5f198d78bcd89",
        "version_major": 2,
        "version_minor": 0
       },
@@ -747,7 +766,7 @@
        "<function __main__.show_image(index)>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 44,
    "id": "eecd937a",
    "metadata": {
     "tags": [
