--- a/content/Task_3.ipynb
+++ b/content/Task_3.ipynb
@@ -7,12 +7,12 @@
    "source": [
     "# Task 3 - Synthesis and Recommendations\n",
     "\n",
-    "Finally, we will discuss the performances of both models, what sort of errors they both made and finally recommendations for future development. "
+    "In this task we will discuss the performances of both models, the types of errors made and recommendations for future development. Throughout the task, I will refer to the model combining HOG and GLCM feature extraction with a RF classifier designed in task 1 as model 1. I will refer to the pre-trained ResNet18 model with a Random Forest classifier as model 2."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "id": "ded677c9",
    "metadata": {
     "tags": [
@@ -42,57 +42,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 38,
-   "id": "b8ced452",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "classification report model 1: \n",
-      "               precision  recall  f1-score  support\n",
-      "crazing            0.91    0.85      0.88     60.0\n",
-      "inclusion          0.82    0.97      0.89     60.0\n",
-      "patches            0.85    0.92      0.88     60.0\n",
-      "pitted             0.88    0.77      0.82     60.0\n",
-      "rolled-in          1.00    1.00      1.00     60.0\n",
-      "scratches          0.95    0.88      0.91     60.0\n",
-      "accuracy           0.90    0.90      0.90      0.9\n",
-      "macro avg          0.90    0.90      0.90    360.0\n",
-      "weighted avg       0.90    0.90      0.90    360.0\n",
-      "\n",
-      " classification report model 2: \n",
-      "               precision  recall  f1-score  support\n",
-      "crazing            1.00    1.00      1.00    60.00\n",
-      "inclusion          0.95    1.00      0.98    60.00\n",
-      "patches            1.00    1.00      1.00    60.00\n",
-      "pitted             1.00    1.00      1.00    60.00\n",
-      "rolled-in          1.00    1.00      1.00    60.00\n",
-      "scratches          1.00    0.95      0.97    60.00\n",
-      "accuracy           0.99    0.99      0.99     0.99\n",
-      "macro avg          0.99    0.99      0.99   360.00\n",
-      "weighted avg       0.99    0.99      0.99   360.00\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"classification report model 1: \\n\", report_1_df) \n",
-    "print(\"\\n classification report model 2: \\n\", report_2_df)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "dc93c674",
    "metadata": {},
    "source": [
     "## Comparative Analysis\n",
-    "The model from task 2, which combines the pre-trained ResNet18 model with a Random Forest classifier performs significantly better at recognising all defects than the model combining HOG and GLCM feature extraction with a RF classifier designed in task 1. The average precision for the model from task 2 is 0.99, while the precision for the model from task 1 is 0.90.\n",
+    "Model 2, which combines the pre-trained ResNet18 with a Random Forest classifier, performs significantly better at recognizing all defects than Model 1, which uses HOG and GLCM feature extraction with a Random Forest classifier. The average precision of Model 2 is 0.99, compared to 0.90 for Model 1. \n",
     "\n",
     "One reason is the types of features extracted by the ResNet18 model. The model consists of multiple convolutional layers, which allows the extraction of hierarchical and multi-scale features such as fine textures, local shapes, and repeated patterns. The model designed in task 1, on the other hand, makes use of only two distinct feature types, HOG and GLCM, which primarily capture edges, gradients, and simple textural statistics, limiting the ability of the classifier to distinguish more subtle or complex defects.\n",
     "\n",
-    "The ResNet18 model has been trained on a large dataset, ImageNet, which contains over 1.2 million images across 1,000 classes. This exposure allows the model to learn a wide variety of visual patterns, from simple edges to complex textures and object structures. As a result, even when applied to grayscale steel surface images, the model can extract rich and generalizable features that help the Random Forest classifier distinguish between different types of defects more effectively than handcrafted features alone.\n",
+    "The ResNet18 model has been trained on a large dataset, (ImageNet), which contains over 1.2 million images across 1,000 classes. This exposure allows the model to learn a wide variety of visual patterns, from simple edges to complex textures and object structures. As a result, even when applied to grayscale steel surface images, the model can extract rich and generalizable features that help the Random Forest classifier distinguish between different types of defects more effectively than handcrafted features alone.\n",
     "\n",
     "I would also like to note that the RF classifier in task 1 is trained using 18,512 input features, while the RF classifier in task 2 is trained using only 512 input features. The fact that model 2 achieves higher precision demonstrates how curated and informative the ResNet-derived features are, with the ResNet part of the model effectively performing high-level preprocessing before classification."
    ]
@@ -104,12 +63,14 @@
    "source": [
     "## Error Analysis\n",
     "\n",
+    "### Model 1\n",
+    "\n",
     "First, for model 1 I have picked the following 3 images:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "id": "2727e860",
    "metadata": {
     "tags": [
@@ -129,6 +90,9 @@
     }
    ],
    "source": [
+    "# import Image from PIL\n",
+    "from PIL import Image\n",
+    "\n",
     "# for each misclassified image, plot the image, the true label and the predicted label which is type and predicted_type\n",
     "for i, row in misclassified_images_1.iterrows():\n",
     "    img = Image.open(row[\"filepath\"]).convert(\"RGB\")\n",
@@ -145,16 +109,18 @@
    "metadata": {},
    "source": [
     "which all depict different 'problems' regarding the model. \n",
-    "1) Patches which are classified as a pitted-surface. This mistake can be due to the stepsize used to collect the GLCM features, where the largest stepsize of 8 might not provide enough distance to properly contextualise these features.\n",
-    "2) Scratches classified as inclusions. This is a classification error which is hard to spot by eye as well, and we will see model 2 equally struggles with this. This is most likely due to both defects consisting of straight, high contrast lines. \n",
-    "3) A pitted-surface clasified as an inclusion. This misclassification can reasonably be due to the image low image quality, with a general gradient between the upper left corner and lower right corner. The HOG feature might have picked up a gradient line, which can easily be classified as an inclusion. \n",
+    "1) Patches which are classified as a pitted-surface. This mistake can be due to the stepsize used to collect the GLCM features, where the largest stepsize of 8 might not provide enough distance to properly contextualise the defect. \n",
+    "2) Scratches classified as inclusions. This is a classification error also hard to spot by eye. We will see model 2 equally struggle with this. This is most likely due to both defects consisting of straight, high contrast lines. \n",
+    "3) A pitted-surface clasified as an inclusion. This misclassification can reasonably be due to the low image quality, with a general gradient between the upper left corner and lower right corner. The HOG feature might have picked up a gradient line, which can easily be classified as an inclusion. \n",
+    "\n",
+    "### Model 2\n",
     "\n",
     "For the model from task 2, there are only 3 mistakes in classification. For each image, a scratch is classified as an inclusion. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "id": "b86357a2",
    "metadata": {
     "tags": [
@@ -194,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "id": "69198464",
    "metadata": {
     "tags": [
@@ -247,9 +213,11 @@
    "id": "47746602",
    "metadata": {},
    "source": [
-    "Again, we can see both defects can be seen by long streaks in a relatively straight line. It is highly likely the ResNet model, which consists of multiple convolution layers, recognises some of these features as similar. \n",
+    "Again, both defects can be recognised by long streaks in a relatively straight line. It is highly likely the ResNet model, which consists of multiple convolution layers, recognises some of these features as similar. \n",
     "\n",
-    "One thing interesting to note, is how in this subset of the data inclusions seem to have a darker colour than the surroundings, while scratches appear lighter. This can be used for a further experiment to try and distinguish the 2 types of defects."
+    "One interesting thing to note, is how in this subset of the data, inclusions seem to have a darker colour than the surroundings, while scratches appear lighter. This can be used for a further experiment to try and distinguish the 2 types of defects.\n",
+    "\n",
+    "To summarise: Model 2, with its more comprehensive feature representation, is better able to classify defects. Both models, however, still have difficulty distinguishing between scratches and inclusions."
    ]
   },
   {
@@ -257,14 +225,25 @@
    "id": "9c739f28",
    "metadata": {},
    "source": [
-    "## Future Strategy & Next Steps:\n",
+    "## Future Strategy & Next Steps\n",
     "\n",
-    "The first experiment I would recommend with GPU access, is to append a new classification layer to the ResNet18 model which we can train using our own data. This is a tried and tested method (as done [here](https://medium.com/@imabhi1216/fine-tuning-a-pre-trained-resnet-18-model-for-image-classification-on-custom-dataset-with-pytorch-02df12e83c2c#bcd2))\n",
+    "### Future Strategy \n",
     "\n",
-    "Next, I would also add a 7th class to the dataset which consists of images without a defect. The current model can classify the type of defect, but ideally you want a camera to pick up on a defect automaticlly and classify the type of defect. If we do not have access to the camera (which is the case in this scenario) we can use parts of the surfaces next to scratches, where the subimages can be extrapolated to the correct dimensions for the model.  \n",
+    "The first experiment I would recommend with GPU access, is to append a new classification layer to the ResNet18 model which we can train using our own data. By training the model to our own dataset, the features will be more curated to the type of images we provide. This is a tried and tested method (as done [here](https://medium.com/@imabhi1216/fine-tuning-a-pre-trained-resnet-18-model-for-image-classification-on-custom-dataset-with-pytorch-02df12e83c2c#bcd2)).\n",
     "\n",
-    "Finally, using the PyTorch library we can easily choose from a [range of models](https://docs.pytorch.org/vision/stable/models.html#torchvision.models.resnet18) to use for this application. Other models might have been trained on a dataset more closely related to the NEU-DET dataset. \n",
+    "Next, I would add a seventh class to the dataset consisting of images without any defects. The current model can classify the type of defect, but ideally, a camera should be able to automatically detect whether a defect is present and then classify its type. If we do not have direct access to the camera, as in this scenario, we can use parts of the surfaces adjacent to scratches, and the subimages can be cropped or resized to the correct dimensions for the model.\n",
     "\n",
+    "Finally, using the PyTorch library we can easily choose from a [range of models](https://docs.pytorch.org/vision/stable/models.html#torchvision.models.resnet18) to use for this application. One of which is the ResNet50 model, which has a deeper architecture than ResNet18, allowing it to extract more complex features. alternatively, we could use a different model which might be trained on images similar to the images in our dataset.  \n",
+    "\n",
+    "It's important to note that it would be best to increase the amount of training and validation data to see how the model would perform over a broader range of images. \n",
+    "\n",
+    "### Data Augmentation\n",
+    "\n",
+    "As mentioned in the error analysis for Model 1, some images may be misclassified due to poor image quality. One way to fix this could be to manually apply small gradients or intensity variations to the images to generate new data with similar properties. \n",
+    "\n",
+    "When looking at the 10 samples of inclusion defects, all inclusions are oriented in a vertical direction. It could be interesting to explore wether this is true for the entire dataset, and if so we can generate additional training data by rotating these images. \n",
+    "\n",
+    "Depending on the broader context of how the model will be used in production, we can also look at self-supervised learning. [This paper](https://www.oaepublish.com/articles/jmi.2025.21) refers to the same dataset and shows that defects can be detected effectively using unlabeled data, reducing the need for manual annotation.\n",
     "\n",
     "\n"
    ]
