final final updates

--- a/content/Task_1.ipynb
+++ b/content/Task_1.ipynb
@@ -395,7 +395,7 @@
    "id": "26533c46",
    "metadata": {},
    "source": [
-    "A confusion matrix can be generated using the validation set, visualising ..."
+    "A confusion matrix can be generated using the validation set"
    ]
   },
   {
