--- a/content/Task_2.ipynb
+++ b/content/Task_2.ipynb
@@ -470,7 +470,11 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "e18e19d5",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [],
    "source": [
     "classification_report_df = pd.DataFrame(classification_report(y_val, y_pred, output_dict=True)).transpose()\n",
